test/driver/delta-run-unwrap-fail-windows.delta
// RUN: %not --crash %delta run %s 2>&1 | %FileCheck -match-full-lines %s
// REQUIRES: windows

void main() {
    int*? p = null;
    // CHECK: Unwrap failed at delta-run-unwrap-fail-windows.delta:[[@LINE+3]]:15
    // CHECK: error:
    // TODO: Why is this printing 'error:' after the assertion failure message? Fix.
    var pp = p!;
}
